--- a/main.css
+++ b/main.css
@@ -11,6 +11,17 @@ body {
   background-size: cover;
 }
 
+body:before {
+  content: "";
+  background: black;
+  background: linear-gradient(167deg, #000000 0%, transparent 100%);
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  position: absolute;
+  z-index: 0;
+}
+
 li {
   list-style: none;
 }
@@ -25,6 +36,8 @@ a:visited {
 
 .title {
   padding: 5px 0 0 10px;
+  z-index: 10;
+  position: relative;
 }
 
 .title h1 {
@@ -42,6 +55,7 @@ a:visited {
   position: absolute;
   top: 4px;
   right: 10px;
+  z-index: 11;
 }
 
 .nav li {
@@ -63,4 +77,15 @@ a:visited {
   .nav li {
     display: none;
   }
+}
+
+.line {
+  width: 85%;
+  height: 100px;
+  border: solid 1px white;
+  border-radius: 45%/60px 100px 0 0;
+  border-color: orange transparent transparent transparent;
+  position: absolute;
+  top: 80px;
+  left: 13%;
 }
