--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,16 @@ body {
     color: white;
     background: url("./media/background.jpg") no-repeat 50% 50%;
     background-size: cover;
+    &:before {
+        content: "";
+        background: black;
+        background: linear-gradient(167deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+        height: 100%;
+        width: 100%;
+        background-size: cover;
+        position: absolute;
+        z-index: 0;
+    }
 }
 
 li {
@@ -28,6 +38,8 @@ a {
 
 .title {
     padding: 5px 0 0 10px;
+    z-index: 10;
+    position: relative;
     h1 {
         font-family: "Megrim", cursive;
         font-size: 45px;
@@ -44,6 +56,7 @@ a {
     position: absolute;
     top: 4px;
     right: 10px;
+    z-index: 11;
     li {
         display: inline;
         padding: 0 15px;
@@ -59,4 +72,15 @@ a {
             display: none;
         }
     }
+}
+
+.line {
+    width: 85%;
+    height: 100px;
+    border: solid 1px $white;
+    border-radius: 45%/60px 100px 0 0;
+    border-color: $orange transparent transparent transparent;
+    position: absolute;
+    top: 80px;
+    left: 13%;
 }
