--- a/style.css
+++ b/style.css
@@ -1,69 +1,86 @@
 @import url("https://fonts.googleapis.com/css2?family=Baumans&family=Megrim&display=swap");
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    overflow-x: hidden;
-    position: relative;
-    font-family: "Baumans", cursive;
-    color: white;
-    background: url("./media/background.jpg") no-repeat 50% 50%;
-    background-size: cover;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow-x: hidden;
+  position: relative;
+  font-family: "Baumans", cursive;
+  color: white;
+  background: url("./media/background.jpg") no-repeat 50% 50%;
+  background-size: cover;
+}
+body:before {
+  content: "";
+  background: black;
+  background: linear-gradient(167deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  position: absolute;
+  z-index: 0;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 a:visited {
-    color: white;
+  color: white;
 }
 
 .title {
-    padding: 5px 0 0 10px;
+  padding: 5px 0 0 10px;
+  z-index: 10;
+  position: relative;
 }
-
 .title h1 {
-    font-family: "Megrim", cursive;
-    font-size: 45px;
-    font-weight: 100;
-    text-transform: uppercase;
-    margin: 0;
-    padding-left: 10px;
-    color: orange;
-    text-shadow: 2px 2px 0px blue, 4px 4px 0px red, 4px 4px 6px orange;
+  font-family: "Megrim", cursive;
+  font-size: 45px;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin: 0;
+  padding-left: 10px;
+  color: orange;
+  text-shadow: 2px 2px 0px blue, 4px 4px 0px red, 4px 4px 6px orange;
 }
 
 .nav {
-    position: absolute;
-    top: 4px;
-    right: 10px;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  z-index: 11;
 }
-
 .nav li {
-    display: inline;
-    padding: 0 15px;
-    border-left: 3px solid white;
+  display: inline;
+  padding: 0 15px;
+  border-left: 3px solid white;
 }
-
 .nav li:hover {
-    border: 2px solid white;
-    transition: 0.5 ease-in-out;
+  border: 2px solid white;
+  transition: 0.5 ease-in-out;
 }
-
 .nav li:active {
-    border: 5px solid white;
+  border: 5px solid white;
 }
-
 @media (max-width: 799px) {
-    .nav li {
-        display: none;
-    }
+  .nav li {
+    display: none;
+  }
 }
 
+.line {
+  width: 85%;
+  height: 100px;
+  border: solid 1px white;
+  border-radius: 45%/60px 100px 0 0;
+  border-color: orange transparent transparent transparent;
+  position: absolute;
+  top: 80px;
+  left: 13%;
+}
 
 /*# sourceMappingURL=style.css.map */
