--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ li {
 }
 
 a {
+  color: white;
   text-decoration: none;
 }
 
@@ -55,7 +56,7 @@ a:visited {
   position: absolute;
   top: 4px;
   right: 10px;
-  z-index: 11;
+  z-index: 100;
 }
 
 .nav li {
@@ -66,7 +67,7 @@ a:visited {
 
 .nav li:hover {
   border: 2px solid white;
-  transition: 0.5 ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .nav li:active {
@@ -91,14 +92,14 @@ a:visited {
 }
 
 .carousel {
-  width: 30%;
+  width: 20%;
   border-radius: 0px 0px 15px 15px;
   margin: -20px auto 20px auto;
   overflow: hidden;
   box-shadow: 8px 8px 4px -3px rgba(0, 0, 0, 0.7);
 }
 
-@media (maw-width: 840px) {
+@media (max-width: 840px) {
   .carousel {
     display: none;
   }
@@ -110,6 +111,7 @@ a:visited {
   margin: 0;
   padding: 0;
   font-size: 0;
+  animation: 10s sliders infinite;
 }
 
 .carousel__figure--pic {
