--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 130vh;
   overflow-x: hidden;
   position: relative;
   font-family: "Baumans", cursive;
@@ -84,17 +84,17 @@ a:visited {
   width: 85%;
   height: 100px;
   border: solid 1px white;
-  border-radius: 45%/60px 100px 0 0;
+  border-radius: 100%/60px 100px 0 0;
   border-color: orange transparent transparent transparent;
   position: absolute;
-  top: 80px;
+  top: 70px;
   left: 13%;
 }
 
 .carousel {
   width: 30%;
   border-radius: 0px 0px 15px 15px;
-  margin: -20px auto 20px auto;
+  margin: -60px auto 10px auto;
   overflow: hidden;
   box-shadow: 8px 8px 4px -3px rgba(0, 0, 0, 0.7);
 }
@@ -150,6 +150,62 @@ a:visited {
   }
 }
 
-body {
-  background-color: black;
+.offers {
+  padding-top: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.perspective {
+  width: 100%;
+  perspective: 800px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.perspective__3d {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  box-shadow: 0 70px 63px -60px black;
+  transform-style: preserve-3d;
+  transition: transform 0.05s linear;
+}
+
+.perspective__3d--card {
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+}
+
+.perspective__3d--card:after {
+  background: inherit;
+  content: "";
+  display: block;
+  position: absolute;
+  left: -60px;
+  top: 40px;
+  width: 100%;
+  height: 85%;
+  z-index: -1;
+  filter: blur(50px);
+}
+
+.perspective__3d--card h2 {
+  position: absolute;
+  font-size: 1.1em;
+  top: 0;
+  font-weight: 100;
+  transform: translateZ(80px);
+  text-transform: uppercase;
+}
+
+.perspective__3d--card span {
+  position: absolute;
+  bottom: 40px;
+  right: -10px;
+  font-size: 0.8em;
+  font-weight: 600;
+  transform: translateZ(35px);
 }
