--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@ $orange: orange;
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 130vh;
     overflow-x: hidden;
     position: relative;
     font-family: "Baumans", cursive;
@@ -80,10 +80,10 @@ a {
     width: 85%;
     height: 100px;
     border: solid 1px $white;
-    border-radius: 45%/60px 100px 0 0;
-    border-color: $orange transparent transparent transparent;
+    border-radius: 100%/60px 100px 0 0;
+    border-color: orange transparent transparent transparent;
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 13%;
 }
 
@@ -91,7 +91,7 @@ a {
 .carousel {
     width: 30%;
     border-radius: 0px 0px 15px 15px;
-    margin: -20px auto 20px auto;
+    margin: -60px auto 10px auto;
     overflow: hidden;
     box-shadow: 8px 8px 4px -3px rgba(0, 0, 0, 0.7);
     @media (max-width: 840px) {
@@ -142,6 +142,57 @@ a {
     }
 }
 
-body {
-    background-color: black;
+.offers {
+    padding-top: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.perspective {
+    width: 100%;
+    perspective: 800px;
+    display: flex;
+    justify-content: space-between;
+    &__3d {
+        width: 200px;
+        height: 200px;
+        margin: auto;
+        box-shadow: 0 70px 63px -60px black;
+        transform-style: preserve-3d;
+        transition: transform 0.05s linear;
+        &--card {
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            border-radius: 15px;
+            &:after {
+                background: inherit;
+                content: "";
+                display: block;
+                position: absolute;
+                left: -60px;
+                top: 40px;
+                width: 100%;
+                height: 85%;
+                z-index: -1;
+                filter: blur(50px);
+            }
+            h2 {
+                position: absolute;
+                font-size: 1.1em;
+                top: 0;
+                font-weight: 100;
+                transform: translateZ(80px);
+                text-transform: uppercase;
+            }
+            span {
+                position: absolute;
+                bottom: 40px;
+                right: -10px;
+                font-size: 0.8em;
+                font-weight: 600;
+                transform: translateZ(35px);
+            }
+        }
+    }
 }
