--- a/main.scss
+++ b/main.scss
@@ -197,15 +197,29 @@ a {
     }
 }
 // *************** GET STRATED**********************
+
+@mixin dash ($array, $offset, $width) {
+stroke-dasharray: $array;
+stroke-dashoffset: $offset;
+stroke-width: $width;
+}
 .button{
     padding-top: 60px;
     position: relative;
     margin: 0 auto;
     width: 320px;
+    &:hover
+        &__rect{
+            @include dash(760,0 ,2px)
+        }
+    
     &__rect{
         fill:transparent;
         stroke: $orange;
         border-bottom: 5px solid $orange;
+
+        transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+        @include dash(140 540,-474,8px)
      }
 
     &__text{
@@ -219,3 +233,4 @@ a {
 
     }
 }
+
