fin de programmation

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  height: 130vh;
+  height: 100vh;
   overflow-x: hidden;
   position: relative;
   font-family: "Baumans", cursive;
@@ -222,6 +222,37 @@ a:visited {
   letter-spacing: 8px;
   color: white;
   top: -48px;
+}
+
+footer {
+  position: absolute;
+  bottom: 20px;
+  left: 10%;
+  right: 10%;
+}
+
+.network {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.3em;
+  font-family: "Megrim", cursive;
+}
+.network a {
+  padding: 0px 25px;
+}
+@media (max-width: 840px) {
+  .network a {
+    padding: 0px 5px;
+  }
+}
+.network a:hover {
+  transform: scale(2.5);
+  transition: 0.4s ease-out;
+  text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white, 0 0 20px orange, 0 0 30px orange, 0 0 40px orange, 0 0 55px orange, 0 0 75px orange;
+}
+.network a:hover:nth-child(5) {
+  transform: scale(1.1);
+  font-weight: bolder;
 }
 
 /*# sourceMappingURL=style.css.map */
