--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@ $orange: orange;
 body {
     margin: 0;
     padding: 0;
-    height: 130vh;
+    height: 100vh;
     overflow-x: hidden;
     position: relative;
     font-family: "Baumans", cursive;
@@ -233,4 +233,34 @@ stroke-width: $width;
 
     }
 }
+//***********************FOOTER*****************
+footer{
+    position: absolute;
+    bottom: 20px;
+    left: 10%;
+    right: 10%;
+}
+.network{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.3em;
+    font-family: 'Megrim', cursive;
 
+    a{
+        padding: 0px 25px;
+
+        @media( max-width: 840px ){
+            padding: 0px 5px;
+        }
+    }
+    & a:hover{
+        transform: scale(2.5);
+        transition: 0.4s ease-out;
+        text-shadow: 0 0 5px $white, 0 0 10px $white, 0 0 15px $white, 0 0 20px $orange, 0 0 30px $orange, 0 0 40px$orange, 0 0 55px $orange, 0 0 75px $orange;
+
+        &:nth-child(5){
+            transform: scale(1.1);
+            font-weight:  bolder;
+        }
+    }
+}
